# Tattoo

./: .gitignore  AUTHORS.in  COPYING  Makefile.am  README.md  TattooHeaderBar.py  TattooWindow.py  autogen.sh  configure.ac  main.py  tattoo.py
data/: app-menu.ui
tattoo/: Makefile.am  __init__.py  application.py  headerbar.py  notebook.py  searchbar.py  terminal.py  window.py
